--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,8 @@ html, body {
 }
 
 .logo {
+  padding: 15px 0;
+  text-align: center;
   font-family: "Rock Salt", $font-family-sans-serif;
 }
 
@@ -74,7 +76,7 @@ hr {
   display: block;
   height: 0;
   width: 98%;
-  margin: 20px auto;
+  margin: 0 auto 20px;
 
   border-top: 1px solid $brand-primary;
 }
