--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,9 +5,10 @@ $brand-orange: #FF6D00;
 $font-family-sans-serif: "PT Sans", Helvetica, Arial, sans-serif;
 $font-family-monospace: "PT Mono", Menlo, Monaco, Consolas, "Courier New", monospace;
 
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
 $screen-xl-min: 1400px;
+
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "mixins";
 
 html, body {
   height: 100%;
@@ -23,13 +24,13 @@ html, body {
 .container-cover {
   height: 100%;
 
-  @media (min-width: $screen-md-min) { padding-top: 5%; }
+  @include size-min(md) { padding-top: 5%; }
 
   .row { height: 100%; }
 
   .cover-image {
     height: 60%;
-    @media (min-width: $screen-md-min) { height: 80%; }
+    @include size-min(md) { height: 80%; }
 
     background: url(../img/bk_camera.jpg) no-repeat center center;
     background-size: cover;
@@ -42,17 +43,17 @@ html, body {
   .cover-text {
     position: relative;
     top: 10%;
-    @media (min-width: $screen-md-min) { top: 30%; }
+    @include size-min(md) { top: 30%; }
 
     color: $brand-primary;
     text-align: center;
     font-size: 8pt;
-    @media (min-width: $screen-sm-min) { font-size: 11pt; }
-    @media (min-width: $screen-xl-min) { font-size: 12pt; }
+    @include size-min(sm) { font-size: 11pt; }
+    @include size-min(xl) { font-size: 12pt; }
 
     hr {
       width: 90%;
-      @media (min-width: $screen-lg-min) { width: 80%; }
+      @include size-min(lg) { width: 80%; }
     }
 
     .cover-scrolldown {
