--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,6 +9,7 @@ $screen-xl-min: 1400px;
 
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "mixins";
+@import "cover";
 
 html, body {
   height: 100%;
@@ -19,58 +20,7 @@ html, body {
   padding: 15px 0;
   text-align: center;
   font-family: "Rock Salt", $font-family-sans-serif;
-}
-
-.container-cover {
-  height: 100%;
-
-  @include size-min(md) { padding-top: 5%; }
-
-  .row { height: 100%; }
-
-  .cover-image {
-    height: 60%;
-    @include size-min(md) { height: 80%; }
-
-    background: url(../img/bk_camera.jpg) no-repeat center center;
-    background-size: cover;
-
-    box-shadow:
-      inset -30px 0 60px 40px rgba(255,255,255,1),
-      inset 5px 0 40px 42px rgba(255,255,255,1);
-  }
-
-  .cover-text {
-    position: relative;
-    top: 10%;
-    @include size-min(md) { top: 30%; }
-
-    color: $brand-primary;
-    text-align: center;
-    font-size: 8pt;
-    @include size-min(sm) { font-size: 11pt; }
-    @include size-min(xl) { font-size: 12pt; }
-
-    hr {
-      width: 90%;
-      @include size-min(lg) { width: 80%; }
-    }
-
-    .cover-scrolldown {
-      margin-top: 10%;
-      font-size: 12pt;
-      color: lighten($brand-primary, 25%);
-    }
-  }
-}
-
-.logo-text {
-  width: 100%;
-  padding: 10px 0;
-  text-align: center;
-
   color: $brand-primary;
-  font-family: "Rock Salt", sans-serif;
 }
 
 hr {
