--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,11 +16,12 @@ html, body {
   overflow-x: hidden;
 }
 
+.logo, h1, h2, h3, h4, h5, h6, strong, b { color: $brand-primary; }
+
 .logo {
   padding: 15px 0;
   text-align: center;
   font-family: "Rock Salt", $font-family-sans-serif;
-  color: $brand-primary;
 }
 
 hr {
