--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,8 @@ html, body {
   height: 100%;
 }
 
+body { position: relative; }
+
 .logo, h1, h2, h3, h4, h5, h6, strong, b { color: $brand-primary; }
 
 .logo {
@@ -42,6 +44,34 @@ hr {
 .nav li:not(.active) a:hover {
   margin-left: -5px;
   border-left: 5px solid lighten($brand-orange, 15%);
+}
+
+.row-affix {
+  margin-bottom: 20px;
+
+  background-color: #fff;
+  box-shadow: 0 30px 20px -10px #fff;
+
+  hr { margin: 0 auto; }
+}
+
+.row-affix.affix {
+  top: 0px;
+  width: 970px;
+  @include size-min(lg) { width: 1170px; }
+}
+
+.nav-affix.affix {
+  top: 114px;
+  width: 213px;
+  @include size-min(lg) { width: 263px; }
+}
+
+.col-content {
+  margin-top: -10px;
+  z-index: -1;
+
+  &.affix-sibling { margin-top: 104px; }
 }
 
 /*
