--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -50,6 +50,18 @@ hr {
   border-left: 5px solid lighten($brand-orange, 15%);
 }
 
+.social {
+  height: $affixed-header-height * .7;
+  line-height: $affixed-header-height * .9;
+  vertical-align: bottom;
+
+  a {
+    margin-right: 20px;
+    padding: 3px 5px;
+  }
+  a:hover, a:active { border-bottom: 2px solid $brand-orange; }
+}
+
 .col-content {
   a { text-decoration: underline; }
   hr { width: 100%; }
