--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,4 @@
 $brand-primary: #212F3D;
-$brand-green: #B4FF00;
 $brand-orange: #FF6D00;
 
 $font-size-base: 16.7px;
@@ -11,17 +10,20 @@ $font-family-monospace: "PT Mono", Menlo, Monaco, Consolas, "Courier New", monos
 $screen-xl-min: 1400px;
 
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "mixins";
+@import "util";
 @import "cover";
 @import "affix";
 
-html, body {
-  height: 100%;
-}
-
+html, body { height: 100%; }
 body { position: relative; }
 
+/*
+ * Typography
+ * --------------------------------------
+ */
 .logo, h1, h2, h3, h4, h5, h6, strong, b { color: $brand-primary; }
+
+.strong-title { padding-right: 10px; }
 
 .logo {
   padding: 15px 0;
@@ -38,30 +40,10 @@ hr {
   border-top-color: $brand-primary;
 }
 
-.strong-title { padding-right: 10px; }
-
-.nav li.active a {
-  margin-left: -5px;
-  border-left: 5px solid $brand-orange;
-}
-
-.nav li:not(.active) a:hover {
-  margin-left: -5px;
-  border-left: 5px solid lighten($brand-orange, 15%);
-}
-
-.social {
-  height: $affixed-header-height * .7;
-  line-height: $affixed-header-height * .9;
-  vertical-align: bottom;
-
-  a {
-    margin-right: 20px;
-    padding: 3px 5px;
-  }
-  a:hover, a:active { border-bottom: 2px solid $brand-orange; }
-}
-
+/*
+ * Content Styles
+ * --------------------------------------
+ */
 .col-content {
   a { text-decoration: underline; }
   hr { width: 100%; }
@@ -85,6 +67,10 @@ hr {
   }
 }
 
+/*
+ * Footer Styles
+ * --------------------------------------
+ */
 .row-footer {
   padding-bottom: 35px;
   font-size: .8em;
@@ -92,15 +78,4 @@ hr {
   hr { margin: 40px auto; }
 
   .fa { color: $brand-orange; }
-}
-
-/*
- *
- * Animation Helpers
- * --------------------------------------------------
- */
-@for $i from 1 through 10 {
-  .animation-delay-#{$i}s {
-    animation-delay: #{$i}s;
-  }
 }
