Add new content

--- a/src/scss/_util.scss
+++ b/src/scss/_util.scss
@@ -8,7 +8,8 @@ $breakpoints: (
   sm: $screen-sm-min,
   md: $screen-md-min,
   lg: $screen-lg-min,
-  xl: $screen-xl-min
+  xl: $screen-xl-min,
+  xxl: 1920
 );
 
 @mixin size-min($breakpoint) {
