--- a/src/scss/_work.scss
+++ b/src/scss/_work.scss
@@ -8,6 +8,28 @@
   padding-top: 7.5%;
   padding-bottom: 10%;
 
+  .row {
+    opacity: 0;
+    transform: translateY(200px);
+    transition: all 600ms ease-out;
+
+    img {
+      opacity: 0;
+      transform: translateX(200px);
+      transition: all 400ms ease-out 500ms;
+    }
+
+    &.in {
+      opacity: 1;
+      transform: translateY(0);
+
+      img {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+  }
+
   .row + .row {
     padding-top: 10%;
   }
