--- a/src/scss/_work.scss
+++ b/src/scss/_work.scss
@@ -31,7 +31,7 @@
   }
 
   h2 {
-    font-size: 0.75 * $h2-font-size;
+    font-size: $h3-font-size;
     @include media-breakpoint-up(md) { font-size: $h2-font-size; }
   }
 
