--- a/src/scss/bootstrap/_bootstrap-custom.scss
+++ b/src/scss/bootstrap/_bootstrap-custom.scss
@@ -3,7 +3,7 @@ $dark: #102134;
 $orange: #FF6D00;
 $light: #f2f3f4;
 
-$headings-font-family: "Jaapokki";
+$font-family-base: 'Abel' -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
 $grid-breakpoints: (
   xs: 0,
