--- a/src/scss/_work.scss
+++ b/src/scss/_work.scss
@@ -1,10 +1,11 @@
 #work {
   background: #fff;
 
-  padding-top: 7.5%;
-  padding-bottom: 10%;
+  padding-top: 5rem;
 
   .row {
+    padding-bottom: 5rem;
+
     opacity: 0;
     transform: translateY(200px);
     transition: all 600ms ease-out;
@@ -24,10 +25,6 @@
         transform: translateX(0);
       }
     }
-  }
-
-  .row + .row {
-    padding-top: 10%;
   }
 
   h2 {
